--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   bloc: ^0.14.0
   flutter_bloc: ^0.20.0
   carousel_pro: ^1.0.0
+  table_calendar: ^2.0.1
 
 dev_dependencies:
   flutter_test:
